--- a/index.html
+++ b/index.html
@@ -12,31 +12,35 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #add8e6; /* Azul claro */
-            color: black; /* Texto em preto para melhor legibilidade */
+            background-color: #0b1c33; /* Azul marinho escuro */
+            color: #ffffff; /* Texto branco */
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #b0e0e6; /* Azul claro (Light Steel Blue) */
+            background-color: #122b4c; /* Azul marinho intermediário */
             padding: 20px;
             text-align: center;
         }
         header h1 {
             margin: 0;
             font-size: 2.5em;
+            color: #ffffff;
         }
         nav {
             display: flex;
             justify-content: center;
-            background-color: #b0e0e6; /* Azul claro (Light Steel Blue) */
+            background-color: #143b5c; /* Azul escuro */
             padding: 10px 0;
         }
         nav a {
-            color: black; /* Texto em preto */
+            color: #ffffff;
             text-decoration: none;
             margin: 0 15px;
             font-size: 1.2em;
+        }
+        nav a:hover {
+            text-decoration: underline;
         }
         section {
             padding: 20px;
@@ -46,30 +50,37 @@
             margin: 0 auto;
         }
         h2 {
-            border-bottom: 2px solid #b0e0e6; /* Azul claro (Light Steel Blue) para os títulos */
+            border-bottom: 2px solid #ffffff;
             padding-bottom: 5px;
         }
+        p {
+            line-height: 1.6;
+        }
         footer {
-            background-color: #b0e0e6; /* Azul claro (Light Steel Blue) */
+            background-color: #122b4c;
             padding: 20px;
             text-align: center;
-            position: relative;
-            bottom: 0;
             width: 100%;
         }
+        footer p {
+            margin: 10px 0;
+        }
         footer a {
-            color: black; /* Texto em preto */
+            color: #ffffff;
             text-decoration: none;
             margin: 0 10px;
-            font-size: 1.5em; /* Tamanho dos ícones */
+            font-size: 1.5em;
+        }
+        footer a:hover {
+            color: #add8e6;
         }
         .image-container {
             text-align: center;
             margin: 20px 0;
         }
         .image-container img {
-            max-width: 100%; /* Imagem não excede a largura do contêiner */
-            height: auto; /* Altura automática para manter a proporção */
+            max-width: 100%;
+            height: auto;
         }
     </style>
 </head>
