--- a/index.html
+++ b/index.html
@@ -12,29 +12,28 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #0b1c33; /* Azul marinho escuro */
-            color: #ffffff; /* Texto branco */
+            background-color: #add8e6; /* Azul claro */
+            color: black; /* Texto em preto */
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #122b4c; /* Azul marinho intermediário */
+            background-color: #b0e0e6; /* Azul claro (Light Steel Blue) */
             padding: 20px;
             text-align: center;
         }
         header h1 {
             margin: 0;
             font-size: 2.5em;
-            color: #ffffff;
         }
         nav {
             display: flex;
             justify-content: center;
-            background-color: #143b5c; /* Azul escuro */
+            background-color: #b0e0e6; /* Azul claro (Light Steel Blue) */
             padding: 10px 0;
         }
         nav a {
-            color: #ffffff;
+            color: black; /* Texto em preto */
             text-decoration: none;
             margin: 0 15px;
             font-size: 1.2em;
@@ -50,14 +49,14 @@
             margin: 0 auto;
         }
         h2 {
-            border-bottom: 2px solid #ffffff;
+            border-bottom: 2px solid #b0e0e6;
             padding-bottom: 5px;
         }
         p {
             line-height: 1.6;
         }
         footer {
-            background-color: #122b4c;
+            background-color: #b0e0e6;
             padding: 20px;
             text-align: center;
             width: 100%;
@@ -66,13 +65,13 @@
             margin: 10px 0;
         }
         footer a {
-            color: #ffffff;
+            color: black;
             text-decoration: none;
             margin: 0 10px;
             font-size: 1.5em;
         }
         footer a:hover {
-            color: #add8e6;
+            color: #333333;
         }
         .image-container {
             text-align: center;
@@ -98,7 +97,6 @@
         <a href="./redes-sociais.html">Redes Sociais</a>
     </nav>
 
-    <!-- Página Inicial -->
     <section id="home">
         <div class="content">
             <h2>Bem-vindo ao mundo.espirita!</h2>
