--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #add8e6; /* Azul claro */
-            color: black; /* Texto em preto */
+            color: black;
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #b0e0e6; /* Azul claro (Light Steel Blue) */
+            background-color: #b0e0e6;
             padding: 20px;
             text-align: center;
         }
@@ -29,17 +29,14 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #b0e0e6; /* Azul claro (Light Steel Blue) */
+            background-color: #b0e0e6;
             padding: 10px 0;
         }
         nav a {
-            color: black; /* Texto em preto */
+            color: black;
             text-decoration: none;
             margin: 0 15px;
             font-size: 1.2em;
-        }
-        nav a:hover {
-            text-decoration: underline;
         }
         section {
             padding: 20px;
@@ -52,26 +49,23 @@
             border-bottom: 2px solid #b0e0e6;
             padding-bottom: 5px;
         }
-        p {
-            line-height: 1.6;
+        .welcome-title {
+            font-size: 2.5em;
+            font-weight: bold;
         }
         footer {
             background-color: #b0e0e6;
             padding: 20px;
             text-align: center;
+            position: relative;
+            bottom: 0;
             width: 100%;
-        }
-        footer p {
-            margin: 10px 0;
         }
         footer a {
             color: black;
             text-decoration: none;
             margin: 0 10px;
             font-size: 1.5em;
-        }
-        footer a:hover {
-            color: #333333;
         }
         .image-container {
             text-align: center;
@@ -97,9 +91,10 @@
         <a href="./redes-sociais.html">Redes Sociais</a>
     </nav>
 
+    <!-- Página Inicial -->
     <section id="home">
         <div class="content">
-            <h2>Bem-vindo ao mundo.espirita!</h2>
+            <h2 class="welcome-title">Bem-vindo ao mundo.espirita!</h2>
             <p>Aqui compartilho reflexões sobre espiritualidade, autoconhecimento e o impacto do Espiritismo em nossas vidas. Explore nossos textos, vídeos e redes sociais para uma jornada de evolução e aprendizado.</p>
         </div>
     </section>
