--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@
             max-width: 800px;
             margin: 0 auto;
         }
-        h2 {
+        h2.welcome-title {
             border-bottom: 2px solid #b0e0e6;
             padding-bottom: 5px;
+            font-size: 2em; /* Aumentado */
         }
-        .welcome-title {
-            font-size: 2.5em;
-            font-weight: bold;
+        p.intro-text {
+            font-size: 1.3em; /* Aumentado */
+            line-height: 1.6;
         }
         footer {
             background-color: #b0e0e6;
@@ -95,7 +96,9 @@
     <section id="home">
         <div class="content">
             <h2 class="welcome-title">Bem-vindo ao mundo.espirita!</h2>
-            <p>Aqui compartilho reflexões sobre espiritualidade, autoconhecimento e o impacto do Espiritismo em nossas vidas. Explore nossos textos, vídeos e redes sociais para uma jornada de evolução e aprendizado.</p>
+            <p class="intro-text">
+                Aqui compartilho reflexões sobre espiritualidade, autoconhecimento e o impacto do Espiritismo em nossas vidas. Explore nossos textos, vídeos e redes sociais para uma jornada de evolução e aprendizado.
+            </p>
         </div>
     </section>
 
