--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
 
     <header>
-        <h1>mundo.espirita</h1>
+        <h1>Mundo Espírita</h1>
     </header>
 
     <nav>
@@ -95,7 +95,7 @@
     <!-- Página Inicial -->
     <section id="home">
         <div class="content">
-            <h2 class="welcome-title">Bem-vindo ao mundo.espirita!</h2>
+            <h2 class="welcome-title">Bem-vindo ao Mundo Espírita!</h2>
             <p class="intro-text">
                 Aqui compartilho reflexões sobre espiritualidade, autoconhecimento e o impacto do Espiritismo em nossas vidas. Explore nossos textos, vídeos e redes sociais para uma jornada de evolução e aprendizado.
             </p>
