--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #add8e6; /* Azul claro */
-            color: black;
+            background-color: white; /* Fundo branco */
+            color: black; /* Texto em preto */
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #b0e0e6;
+            background-color: rgba(176, 224, 230, 0.8); /* Azul claro com opacidade */
             padding: 20px;
             text-align: center;
         }
         header h1 {
             margin: 0;
-            font-size: 2.5em;
+            font-size: 6em; /* Igual à página de vídeos */
         }
         nav {
             display: flex;
             justify-content: center;
-            background-color: #b0e0e6;
+            background-color: rgba(176, 224, 230, 0.8); /* Azul claro com opacidade */
             padding: 10px 0;
         }
         nav a {
@@ -38,29 +38,34 @@
             margin: 0 15px;
             font-size: 1.2em;
         }
+        nav a:hover {
+            text-decoration: underline;
+        }
         section {
             padding: 20px;
         }
         .content {
             max-width: 800px;
             margin: 0 auto;
+            background-color: rgba(255, 255, 255, 0.8); /* Fundo branco com opacidade */
+            padding: 20px;
+            border-radius: 10px;
         }
-        h2.welcome-title {
+        h2 {
             border-bottom: 2px solid #b0e0e6;
             padding-bottom: 5px;
-            font-size: 2em; /* Aumentado */
         }
-        p.intro-text {
-            font-size: 1.3em; /* Aumentado */
+        p {
             line-height: 1.6;
         }
         footer {
-            background-color: #b0e0e6;
+            background-color: rgba(176, 224, 230, 0.8);
             padding: 20px;
             text-align: center;
-            position: relative;
-            bottom: 0;
             width: 100%;
+        }
+        footer p {
+            margin: 10px 0;
         }
         footer a {
             color: black;
@@ -68,20 +73,15 @@
             margin: 0 10px;
             font-size: 1.5em;
         }
-        .image-container {
-            text-align: center;
-            margin: 20px 0;
-        }
-        .image-container img {
-            max-width: 100%;
-            height: auto;
+        footer a:hover {
+            color: #333333;
         }
     </style>
 </head>
 <body>
 
     <header>
-        <h1>Mundo Espírita</h1>
+        <h1>mundo.espirita</h1>
     </header>
 
     <nav>
@@ -92,13 +92,10 @@
         <a href="./redes-sociais.html">Redes Sociais</a>
     </nav>
 
-    <!-- Página Inicial -->
     <section id="home">
         <div class="content">
-            <h2 class="welcome-title">Bem-vindo ao Mundo Espírita!</h2>
-            <p class="intro-text">
-                Aqui compartilho reflexões sobre espiritualidade, autoconhecimento e o impacto do Espiritismo em nossas vidas. Explore nossos textos, vídeos e redes sociais para uma jornada de evolução e aprendizado.
-            </p>
+            <h2>Bem-vindo ao mundo.espirita!</h2>
+            <p>Aqui compartilho reflexões sobre espiritualidade, autoconhecimento e o impacto do Espiritismo em nossas vidas. Explore nossos textos, vídeos e redes sociais para uma jornada de evolução e aprendizado.</p>
         </div>
     </section>
 
