--- a/redes sociais.html
+++ b/redes sociais.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Redes Sociais - mundo.espirita</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,9 +34,18 @@
             margin: 0 15px;
             font-size: 1.2em;
         }
+        nav a:hover,
+        nav a:focus {
+            text-decoration: underline;
+            outline: none;
+        }
         section {
             padding: 20px;
             text-align: center;
+        }
+        .content {
+            max-width: 800px;
+            margin: 0 auto;
         }
         .social-links {
             margin-top: 20px;
@@ -44,9 +56,15 @@
             text-decoration: none;
             color: black;
         }
+        .social-links a:hover,
+        .social-links a:focus {
+            color: #333333;
+            outline: none;
+        }
         .social-links span {
             margin-left: 5px;
             font-size: 1.2em;
+            vertical-align: middle;
         }
         footer {
             background-color: rgba(176, 224, 230, 0.8);
@@ -74,8 +92,12 @@
             <h2>Redes Sociais</h2>
             <p>Siga-me nas redes sociais e acompanhe todas as atualizações e novos conteúdos:</p>
             <div class="social-links">
-                <a href="https://www.instagram.com/_mundo_espirita" target="_blank"><i class="fab fa-instagram"></i><span>Instagram</span></a>
-                <a href="https://www.youtube.com/@_mundo_espirita" target="_blank"><i class="fab fa-youtube"></i><span>YouTube</span></a>
+                <a href="https://www.instagram.com/_mundo_espirita" target="_blank" rel="noopener noreferrer" aria-label="Instagram Mundo Espírita">
+                    <i class="fab fa-instagram"></i><span>Instagram</span>
+                </a>
+                <a href="https://www.youtube.com/@_mundo_espirita" target="_blank" rel="noopener noreferrer" aria-label="YouTube Mundo Espírita">
+                    <i class="fab fa-youtube"></i><span>YouTube</span>
+                </a>
             </div>
         </div>
     </section>
@@ -86,3 +108,4 @@
 
 </body>
 </html>
+
