--- a/redes-sociais.html
+++ b/redes-sociais.html
@@ -1,110 +1,144 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Redes Sociais - mundo.espirita</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            color: black;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: rgba(176, 224, 230, 0.8);
-            padding: 20px;
-            text-align: center;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: rgba(176, 224, 230, 0.8);
-            padding: 10px 0;
-        }
-        nav a {
-            color: black;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 1.2em;
-        }
-        nav a:hover,
-        nav a:focus {
-            text-decoration: underline;
-            outline: none;
-        }
-        section {
-            padding: 20px;
-            text-align: center;
-        }
-        .content {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        .social-links {
-            margin-top: 20px;
-        }
-        .social-links a {
-            margin: 0 10px;
-            font-size: 2em;
-            text-decoration: none;
-            color: black;
-        }
-        .social-links a:hover,
-        .social-links a:focus {
-            color: #333333;
-            outline: none;
-        }
-        .social-links span {
-            margin-left: 5px;
-            font-size: 1.2em;
-            vertical-align: middle;
-        }
-        footer {
-            background-color: rgba(176, 224, 230, 0.8);
-            padding: 20px;
-            text-align: center;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Redes Sociais - mundo.espirita</title>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #add8e6; /* Azul claro */
+      color: black;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #b0e0e6; /* Azul claro (Light Steel Blue) */
+      padding: 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      background-color: #b0e0e6;
+      padding: 10px 0;
+    }
+
+    nav a {
+      color: black;
+      text-decoration: none;
+      margin: 0 15px;
+      font-size: 1.2em;
+    }
+
+    nav a:hover,
+    nav a:focus {
+      text-decoration: underline;
+      outline: none;
+    }
+
+    section {
+      padding: 20px;
+    }
+
+    .content {
+      max-width: 800px;
+      margin: 0 auto;
+      text-align: center;
+    }
+
+    h2 {
+      font-size: 2em;
+      margin-bottom: 15px;
+      border-bottom: 2px solid #b0e0e6;
+      padding-bottom: 5px;
+    }
+
+    p {
+      font-size: 1.3em;
+      line-height: 1.6;
+    }
+
+    .social-links {
+      margin-top: 20px;
+    }
+
+    .social-links a {
+      display: inline-block;
+      margin: 0 15px;
+      font-size: 2em;
+      text-decoration: none;
+      color: black;
+    }
+
+    .social-links a:hover,
+    .social-links a:focus {
+      color: #333333;
+      outline: none;
+    }
+
+    .social-links span {
+      margin-left: 8px;
+      font-size: 1.2em;
+      vertical-align: middle;
+    }
+
+    footer {
+      background-color: #b0e0e6;
+      padding: 20px;
+      text-align: center;
+    }
+
+    footer p {
+      margin: 10px 0;
+    }
+  </style>
 </head>
 <body>
 
-    <header>
-        <h1>Mundo Espírita</h1>
-    </header>
+  <header>
+    <h1>mundo.espirita</h1>
+  </header>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="textos.html">Textos</a>
-        <a href="pensamentos.html">Pensamentos</a>
-        <a href="videos.html">Vídeos</a>
-        <a href="redes-sociais.html">Redes Sociais</a>
-    </nav>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="textos.html">Textos</a>
+    <a href="pensamentos.html">Pensamentos</a>
+    <a href="videos.html">Vídeos</a>
+    <a href="redes-sociais.html">Redes Sociais</a>
+  </nav>
 
-    <section id="redes-sociais">
-        <div class="content">
-            <h2>Redes Sociais</h2>
-            <p>Siga-me nas redes sociais e acompanhe todas as atualizações e novos conteúdos:</p>
-            <div class="social-links">
-                <a href="https://www.instagram.com/_mundo_espirita" target="_blank" rel="noopener noreferrer" aria-label="Instagram Mundo Espírita">
-                    <i class="fab fa-instagram"></i><span>Instagram</span>
-                </a>
-                <a href="https://www.youtube.com/@_mundo_espirita" target="_blank" rel="noopener noreferrer" aria-label="YouTube Mundo Espírita">
-                    <i class="fab fa-youtube"></i><span>YouTube</span>
-                </a>
-            </div>
-        </div>
-    </section>
+  <section id="redes-sociais">
+    <div class="content">
+      <h2>Redes Sociais</h2>
+      <p>Siga-me nas redes sociais e acompanhe todas as atualizações e novos conteúdos:</p>
+      <div class="social-links">
+        <a href="https://www.instagram.com/_mundo_espirita" target="_blank" rel="noopener noreferrer" aria-label="Instagram Mundo Espírita">
+          <i class="fab fa-instagram"></i><span>Instagram</span>
+        </a>
+        <a href="https://www.youtube.com/@_mundo_espirita" target="_blank" rel="noopener noreferrer" aria-label="YouTube Mundo Espírita">
+          <i class="fab fa-youtube"></i><span>YouTube</span>
+        </a>
+      </div>
+    </div>
+  </section>
 
-    <footer>
-        <p>&copy; 2024 mundo.espirita. Todos os direitos reservados.</p>
-    </footer>
+  <footer>
+    <p>&copy; 2024 mundo.espirita. Todos os direitos reservados.</p>
+  </footer>
 
 </body>
 </html>
+
