--- a/textos.html
+++ b/textos.html
@@ -160,6 +160,10 @@
                 <div class="accordion-title" onclick="toggleAccordion('texto7', 'Espiritismo.html')">O que é o Espiritismo</div>
                 <div class="accordion-content" id="texto7"></div>
             </div>
+ 	<div class="accordion">
+                <div class="accordion-title" onclick="toggleAccordion('texto8', 'aceitacao.html')">Aceitar-se para transformar-se: um olhar espírita</div>
+                <div class="accordion-content" id="texto5"></div>
+            </div>
 
         </div>
     </section>
