--- a/pensamento.html
+++ b/pensamento.html
@@ -147,6 +147,11 @@
                 <div class="accordion-content" id="texto2"></div>
             </div>
 
+	<div class="accordion">
+                <div class="accordion-title" onclick="toggleAccordion('texto3', 'aceitar'.html')"> Aceitar para Evoluir </div>
+                <div class="accordion-content" id="texto3"></div>
+            </div>
+
            
             <!-- Adicione mais pensamentos seguindo o mesmo padrão -->
         </div>
