--- a/pensamento.html
+++ b/pensamento.html
@@ -148,7 +148,7 @@
             </div>
 
 	<div class="accordion">
-                <div class="accordion-title" onclick="toggleAccordion('texto3', 'aceitar'.html')"> Aceitar para Evoluir </div>
+                <div class="accordion-title" onclick="toggleAccordion('texto3', 'aceitar.html')"> Aceitar para Evoluir </div>
                 <div class="accordion-content" id="texto3"></div>
             </div>
 
